--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 109,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -735,54 +735,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "filter must be an instance of dict, bson.son.SON, or any other type that inherits from collections.Mapping",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[108], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Delete all documents where LocalAuthorityName is \"Dover\"\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m result \u001b[39m=\u001b[39m establishments\u001b[39m.\u001b[39;49mdelete_many(dover_filter)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/collection.py:1415\u001b[0m, in \u001b[0;36mCollection.delete_many\u001b[0;34m(self, filter, collation, hint, session, let, comment)\u001b[0m\n\u001b[1;32m   1370\u001b[0m \u001b[39m\"\"\"Delete one or more documents matching the filter.\u001b[39;00m\n\u001b[1;32m   1371\u001b[0m \n\u001b[1;32m   1372\u001b[0m \u001b[39m  >>> db.test.count_documents({'x': 1})\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1411\u001b[0m \u001b[39m.. versionadded:: 3.0\u001b[39;00m\n\u001b[1;32m   1412\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1413\u001b[0m write_concern \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_write_concern_for(session)\n\u001b[1;32m   1414\u001b[0m \u001b[39mreturn\u001b[39;00m DeleteResult(\n\u001b[0;32m-> 1415\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_delete_retryable(\n\u001b[1;32m   1416\u001b[0m         \u001b[39mfilter\u001b[39;49m,\n\u001b[1;32m   1417\u001b[0m         \u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m   1418\u001b[0m         write_concern\u001b[39m=\u001b[39;49mwrite_concern,\n\u001b[1;32m   1419\u001b[0m         collation\u001b[39m=\u001b[39;49mcollation,\n\u001b[1;32m   1420\u001b[0m         hint\u001b[39m=\u001b[39;49mhint,\n\u001b[1;32m   1421\u001b[0m         session\u001b[39m=\u001b[39;49msession,\n\u001b[1;32m   1422\u001b[0m         let\u001b[39m=\u001b[39;49mlet,\n\u001b[1;32m   1423\u001b[0m         comment\u001b[39m=\u001b[39;49mcomment,\n\u001b[1;32m   1424\u001b[0m     ),\n\u001b[1;32m   1425\u001b[0m     write_concern\u001b[39m.\u001b[39macknowledged,\n\u001b[1;32m   1426\u001b[0m )\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/collection.py:1290\u001b[0m, in \u001b[0;36mCollection._delete_retryable\u001b[0;34m(self, criteria, multi, write_concern, op_id, ordered, collation, hint, session, let, comment)\u001b[0m\n\u001b[1;32m   1274\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_delete\u001b[39m(session, sock_info, retryable_write):\n\u001b[1;32m   1275\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_delete(\n\u001b[1;32m   1276\u001b[0m         sock_info,\n\u001b[1;32m   1277\u001b[0m         criteria,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1287\u001b[0m         comment\u001b[39m=\u001b[39mcomment,\n\u001b[1;32m   1288\u001b[0m     )\n\u001b[0;32m-> 1290\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__database\u001b[39m.\u001b[39;49mclient\u001b[39m.\u001b[39;49m_retryable_write(\n\u001b[1;32m   1291\u001b[0m     (write_concern \u001b[39mor\u001b[39;49;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite_concern)\u001b[39m.\u001b[39;49macknowledged \u001b[39mand\u001b[39;49;00m \u001b[39mnot\u001b[39;49;00m multi, _delete, session\n\u001b[1;32m   1292\u001b[0m )\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/mongo_client.py:1476\u001b[0m, in \u001b[0;36mMongoClient._retryable_write\u001b[0;34m(self, retryable, func, session)\u001b[0m\n\u001b[1;32m   1474\u001b[0m \u001b[39m\"\"\"Internal retryable write helper.\"\"\"\u001b[39;00m\n\u001b[1;32m   1475\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tmp_session(session) \u001b[39mas\u001b[39;00m s:\n\u001b[0;32m-> 1476\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_retry_with_session(retryable, func, s, \u001b[39mNone\u001b[39;49;00m)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/mongo_client.py:1349\u001b[0m, in \u001b[0;36mMongoClient._retry_with_session\u001b[0;34m(self, retryable, func, session, bulk)\u001b[0m\n\u001b[1;32m   1339\u001b[0m \u001b[39m\"\"\"Execute an operation with at most one consecutive retries\u001b[39;00m\n\u001b[1;32m   1340\u001b[0m \n\u001b[1;32m   1341\u001b[0m \u001b[39mReturns func()'s return value on success. On error retries the same\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1344\u001b[0m \u001b[39mRe-raises any exception thrown by func().\u001b[39;00m\n\u001b[1;32m   1345\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1346\u001b[0m retryable \u001b[39m=\u001b[39m (\n\u001b[1;32m   1347\u001b[0m     retryable \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions\u001b[39m.\u001b[39mretry_writes \u001b[39mand\u001b[39;00m session \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m session\u001b[39m.\u001b[39min_transaction\n\u001b[1;32m   1348\u001b[0m )\n\u001b[0;32m-> 1349\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_retry_internal(retryable, func, session, bulk)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/_csot.py:105\u001b[0m, in \u001b[0;36mapply.<locals>.csot_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    103\u001b[0m         \u001b[39mwith\u001b[39;00m _TimeoutContext(timeout):\n\u001b[1;32m    104\u001b[0m             \u001b[39mreturn\u001b[39;00m func(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m--> 105\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/mongo_client.py:1390\u001b[0m, in \u001b[0;36mMongoClient._retry_internal\u001b[0;34m(self, retryable, func, session, bulk)\u001b[0m\n\u001b[1;32m   1388\u001b[0m                 \u001b[39mraise\u001b[39;00m last_error\n\u001b[1;32m   1389\u001b[0m             retryable \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m-> 1390\u001b[0m         \u001b[39mreturn\u001b[39;00m func(session, sock_info, retryable)\n\u001b[1;32m   1391\u001b[0m \u001b[39mexcept\u001b[39;00m ServerSelectionTimeoutError:\n\u001b[1;32m   1392\u001b[0m     \u001b[39mif\u001b[39;00m is_retrying():\n\u001b[1;32m   1393\u001b[0m         \u001b[39m# The application may think the write was never attempted\u001b[39;00m\n\u001b[1;32m   1394\u001b[0m         \u001b[39m# if we raise ServerSelectionTimeoutError on the retry\u001b[39;00m\n\u001b[1;32m   1395\u001b[0m         \u001b[39m# attempt. Raise the original exception instead.\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/collection.py:1275\u001b[0m, in \u001b[0;36mCollection._delete_retryable.<locals>._delete\u001b[0;34m(session, sock_info, retryable_write)\u001b[0m\n\u001b[1;32m   1274\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_delete\u001b[39m(session, sock_info, retryable_write):\n\u001b[0;32m-> 1275\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_delete(\n\u001b[1;32m   1276\u001b[0m         sock_info,\n\u001b[1;32m   1277\u001b[0m         criteria,\n\u001b[1;32m   1278\u001b[0m         multi,\n\u001b[1;32m   1279\u001b[0m         write_concern\u001b[39m=\u001b[39;49mwrite_concern,\n\u001b[1;32m   1280\u001b[0m         op_id\u001b[39m=\u001b[39;49mop_id,\n\u001b[1;32m   1281\u001b[0m         ordered\u001b[39m=\u001b[39;49mordered,\n\u001b[1;32m   1282\u001b[0m         collation\u001b[39m=\u001b[39;49mcollation,\n\u001b[1;32m   1283\u001b[0m         hint\u001b[39m=\u001b[39;49mhint,\n\u001b[1;32m   1284\u001b[0m         session\u001b[39m=\u001b[39;49msession,\n\u001b[1;32m   1285\u001b[0m         retryable_write\u001b[39m=\u001b[39;49mretryable_write,\n\u001b[1;32m   1286\u001b[0m         let\u001b[39m=\u001b[39;49mlet,\n\u001b[1;32m   1287\u001b[0m         comment\u001b[39m=\u001b[39;49mcomment,\n\u001b[1;32m   1288\u001b[0m     )\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/collection.py:1219\u001b[0m, in \u001b[0;36mCollection._delete\u001b[0;34m(self, sock_info, criteria, multi, write_concern, op_id, ordered, collation, hint, session, retryable_write, let, comment)\u001b[0m\n\u001b[1;32m   1203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_delete\u001b[39m(\n\u001b[1;32m   1204\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   1205\u001b[0m     sock_info,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1216\u001b[0m     comment\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   1217\u001b[0m ):\n\u001b[1;32m   1218\u001b[0m     \u001b[39m\"\"\"Internal delete helper.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1219\u001b[0m     common\u001b[39m.\u001b[39;49mvalidate_is_mapping(\u001b[39m\"\u001b[39;49m\u001b[39mfilter\u001b[39;49m\u001b[39m\"\u001b[39;49m, criteria)\n\u001b[1;32m   1220\u001b[0m     write_concern \u001b[39m=\u001b[39m write_concern \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrite_concern\n\u001b[1;32m   1221\u001b[0m     acknowledged \u001b[39m=\u001b[39m write_concern\u001b[39m.\u001b[39macknowledged\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/common.py:511\u001b[0m, in \u001b[0;36mvalidate_is_mapping\u001b[0;34m(option, value)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[39m\"\"\"Validate the type of method arguments that expect a document.\"\"\"\u001b[39;00m\n\u001b[1;32m    510\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(value, abc\u001b[39m.\u001b[39mMapping):\n\u001b[0;32m--> 511\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m    512\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m must be an instance of dict, bson.son.SON, or \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    513\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39many other type that inherits from \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    514\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcollections.Mapping\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (option,)\n\u001b[1;32m    515\u001b[0m     )\n",
-      "\u001b[0;31mTypeError\u001b[0m: filter must be an instance of dict, bson.son.SON, or any other type that inherits from collections.Mapping"
-     ]
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x7fc360bfc610>"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
-    "result = establishments.delete_many(dover_filter)"
+    "establishments.delete_many({'LocalAuthorityName':'Dover'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "dover_check = establishments.find({'LocalAuthorityName':'Dover'})\n",
+    "count = 0\n",
+    "for i in dover_check:\n",
+    "    count += 1\n",
+    "print(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('646c4242ce40bc5e1d4befdb'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "\n",
+    "pprint(establishments.find_one())"
    ]
   },
   {
