--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 115,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "994\n"
+      "0\n"
      ]
     }
    ],
@@ -707,29 +707,6 @@
     "count = 0\n",
     "for i in dover_filter:\n",
     "    count += 1\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "9d4d17ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Cursor' object has no attribute 'estimated_document_count'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[106], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m count \u001b[39m=\u001b[39m dover_filter\u001b[39m.\u001b[39;49mestimated_document_count() \u001b[39m# Oh great so this works...\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(count)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Cursor' object has no attribute 'estimated_document_count'"
-     ]
-    }
-   ],
-   "source": [
-    "count = dover_filter.estimated_document_count() # but this doesn't work on the filtered item\n",
     "print(count)"
    ]
   },
@@ -757,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -780,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 118,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -853,12 +830,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fc360909130>"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many({},[{'$set': {'geocode.longitude': {'$toDouble': '$geocode.longitude'}, 'geocode.latitude': {'$toDouble': '$geocode.latitude'}}}])"
    ]
   },
   {
@@ -872,10 +861,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fc3c218ea60>"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -884,22 +884,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fc3c4116a90>"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({},[{'$set': {'RatingValue': {'$toInt': '$RatingValue'}}}])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'NoneType', 'int'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "\n",
+    "# Find distinct values in the RatingValue field\n",
+    "distinct_r_values = establishments.distinct('RatingValue')\n",
+    "\n",
+    "# Get the data types of the distinct values\n",
+    "data_types_r = set(type(value).__name__ for value in distinct_r_values)\n",
+    "print(data_types_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "da511eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'float'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find distinct values in the geocode.longitude field\n",
+    "distinct_values = establishments.distinct('geocode.longitude')\n",
+    "\n",
+    "# Get the data types of the distinct values\n",
+    "data_types = set(type(value).__name__ for value in distinct_values)\n",
+    "print(data_types)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9fdbc0b3",
+   "metadata": {},
+   "source": [
+    "We can see that the conversions of values worked"
    ]
   }
  ],
