--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -680,7 +680,7 @@
    ],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query = {'LocalAuthorityName': {'$regex':'London'}, 'RatingValue': {'$gte':4}}\n",
+    "query = {'LocalAuthorityName': {'$regex':'London'}, 'RatingValue': {'$gte':4}} # https://www.mongodb.com/docs/manual/reference/operator/query used through this notebook\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
     "print(establishments.count_documents(query))\n",
