--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 132,
    "id": "c534ceb6",
    "metadata": {},
    "outputs": [
@@ -120,122 +120,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            _id   FHRSID  ChangesByServerID   \n",
-      "0      646c4242ce40bc5e1d4becf6   632212                  0  \\\n",
-      "1      646c4242ce40bc5e1d4becf7   254250                  0   \n",
-      "2      646c4242ce40bc5e1d4becf8  1349980                  0   \n",
-      "3      646c4242ce40bc5e1d4becf9   429982                  0   \n",
-      "4      646c4242ce40bc5e1d4becfa  1531040                  0   \n",
-      "...                         ...      ...                ...   \n",
-      "39774  646c4244ce40bc5e1d4c8854   961078                  0   \n",
-      "39775  646c4244ce40bc5e1d4c8855   961141                  0   \n",
-      "39776  646c4244ce40bc5e1d4c8856   961603                  0   \n",
-      "39777  646c4244ce40bc5e1d4c8857  1173740                  0   \n",
-      "39778  646c4244ce40bc5e1d4c8858  1109561                  0   \n",
+      "                            _id     FHRSID  ChangesByServerID   \n",
+      "0      646c4242ce40bc5e1d4befdb  1043695.0                0.0  \\\n",
+      "1      646c4242ce40bc5e1d4befdd   647177.0                0.0   \n",
+      "2      646c4242ce40bc5e1d4befde   289353.0                0.0   \n",
+      "3      646c4242ce40bc5e1d4befe1   289352.0                0.0   \n",
+      "4      646c4242ce40bc5e1d4befe3   289560.0                0.0   \n",
+      "...                         ...        ...                ...   \n",
+      "38781  646c4244ce40bc5e1d4c8855   961141.0                0.0   \n",
+      "38782  646c4244ce40bc5e1d4c8856   961603.0                0.0   \n",
+      "38783  646c4244ce40bc5e1d4c8857  1173740.0                0.0   \n",
+      "38784  646c4244ce40bc5e1d4c8858  1109561.0                0.0   \n",
+      "38785  646d6edc94d75fe1370951d9        NaN                NaN   \n",
       "\n",
-      "      LocalAuthorityBusinessID          BusinessName   \n",
-      "0                 PI/000043474           Lenox House  \\\n",
-      "1                 PI/000066174       The Pines Calyx   \n",
-      "2                 PI/000084064               Boodles   \n",
-      "3                 PI/000043978              The Barn   \n",
-      "4                 PI/000085904       The Halfway Hut   \n",
-      "...                        ...                   ...   \n",
-      "39774                   708124  Barley C of E School   \n",
-      "39775                   708525  Barkway First School   \n",
-      "39776                   712119          The Chequers   \n",
-      "39777                   716250        Roberto's Deli   \n",
-      "39778                   715931      The Fox & Hounds   \n",
+      "      LocalAuthorityBusinessID                         BusinessName   \n",
+      "0                 PI/000073616                         The Pavilion  \\\n",
+      "1                 PI/000041489                  Wear Bay Bowls Club   \n",
+      "2                 PI/000002468  St Marys COE (aided) Primary School   \n",
+      "3                 PI/000002460                             The Ship   \n",
+      "4                 PI/000039927                              Mariner   \n",
+      "...                        ...                                  ...   \n",
+      "38781                   708525                 Barkway First School   \n",
+      "38782                   712119                         The Chequers   \n",
+      "38783                   716250                       Roberto's Deli   \n",
+      "38784                   715931                     The Fox & Hounds   \n",
+      "38785                      NaN                      Penang Flavours   \n",
       "\n",
-      "                            BusinessType  BusinessTypeID   \n",
-      "0      Hotel/bed & breakfast/guest house            7842  \\\n",
-      "1                Other catering premises            7841   \n",
-      "2                Restaurant/Cafe/Canteen               1   \n",
-      "3                Restaurant/Cafe/Canteen               1   \n",
-      "4                Restaurant/Cafe/Canteen               1   \n",
-      "...                                  ...             ...   \n",
-      "39774          School/college/university            7845   \n",
-      "39775          School/college/university            7845   \n",
-      "39776                  Pub/bar/nightclub            7843   \n",
-      "39777                  Retailers - other            4613   \n",
-      "39778                  Pub/bar/nightclub            7843   \n",
+      "                    BusinessType  BusinessTypeID   \n",
+      "0        Restaurant/Cafe/Canteen               1  \\\n",
+      "1              Pub/bar/nightclub            7843   \n",
+      "2      School/college/university            7845   \n",
+      "3              Pub/bar/nightclub            7843   \n",
+      "4              Pub/bar/nightclub            7843   \n",
+      "...                          ...             ...   \n",
+      "38781  School/college/university            7845   \n",
+      "38782          Pub/bar/nightclub            7843   \n",
+      "38783          Retailers - other            4613   \n",
+      "38784          Pub/bar/nightclub            7843   \n",
+      "38785    Restaurant/Cafe/Canteen               1   \n",
       "\n",
-      "                                            AddressLine1      AddressLine2   \n",
-      "0                                      27 Granville Road  St Margarets Bay  \\\n",
-      "1                                       The Pines Garden        Beach Road   \n",
-      "2                                         3 The Droveway  St Margarets Bay   \n",
-      "3                                       Reach Court Farm        Reach Road   \n",
-      "4                         Walmer And Kingsdown Golf Club          The Leas   \n",
-      "...                                                  ...               ...   \n",
-      "39774  Barley Church Of England Vc First School Churc...                     \n",
-      "39775                Barkway First School 84 High Street                     \n",
-      "39776                           Chequers Inn London Road                     \n",
-      "39777                 Staddle Barn Manor Farm Church End                     \n",
-      "39778                         Fox And Hounds High Street                     \n",
+      "                                    AddressLine1       AddressLine2   \n",
+      "0                            East Cliff Pavilion      Wear Bay Road  \\\n",
+      "1                                  Wear Bay Road         Folkestone   \n",
+      "2      St Marys Church Of England Primary School        Warren Road   \n",
+      "3                                   23 The Stade         Folkestone   \n",
+      "4                                   16 The Stade         Folkestone   \n",
+      "...                                          ...                ...   \n",
+      "38781        Barkway First School 84 High Street                      \n",
+      "38782                   Chequers Inn London Road                      \n",
+      "38783         Staddle Barn Manor Farm Church End                      \n",
+      "38784                 Fox And Hounds High Street                      \n",
+      "38785                            Penang Flavours  146A Plumstead Rd   \n",
       "\n",
-      "                 AddressLine3  ...          LocalAuthorityWebSite   \n",
-      "0                        Kent  ...       http://www.dover.gov.uk/  \\\n",
-      "1            St Margarets Bay  ...       http://www.dover.gov.uk/   \n",
-      "2                        Kent  ...       http://www.dover.gov.uk/   \n",
-      "3      St Margarets At Cliffe  ...       http://www.dover.gov.uk/   \n",
-      "4                   Kingsdown  ...       http://www.dover.gov.uk/   \n",
-      "...                       ...  ...                            ...   \n",
-      "39774                  Barley  ...  http://www.north-herts.gov.uk   \n",
-      "39775                 Barkway  ...  http://www.north-herts.gov.uk   \n",
-      "39776                  Barley  ...  http://www.north-herts.gov.uk   \n",
-      "39777                  Barley  ...  http://www.north-herts.gov.uk   \n",
-      "39778                  Barley  ...  http://www.north-herts.gov.uk   \n",
+      "      AddressLine3  ...               LocalAuthorityWebSite   \n",
+      "0       Folkestone  ...  http://www.folkestone-hythe.gov.uk  \\\n",
+      "1             Kent  ...  http://www.folkestone-hythe.gov.uk   \n",
+      "2       Folkestone  ...  http://www.folkestone-hythe.gov.uk   \n",
+      "3             Kent  ...  http://www.folkestone-hythe.gov.uk   \n",
+      "4             Kent  ...  http://www.folkestone-hythe.gov.uk   \n",
+      "...            ...  ...                                 ...   \n",
+      "38781      Barkway  ...       http://www.north-herts.gov.uk   \n",
+      "38782       Barley  ...       http://www.north-herts.gov.uk   \n",
+      "38783       Barley  ...       http://www.north-herts.gov.uk   \n",
+      "38784       Barley  ...       http://www.north-herts.gov.uk   \n",
+      "38785       London  ...    http://www.royalgreenwich.gov.uk   \n",
       "\n",
-      "          LocalAuthorityEmailAddress   \n",
-      "0      publicprotection@dover.gov.uk  \\\n",
-      "1      publicprotection@dover.gov.uk   \n",
-      "2      publicprotection@dover.gov.uk   \n",
-      "3      publicprotection@dover.gov.uk   \n",
-      "4      publicprotection@dover.gov.uk   \n",
-      "...                              ...   \n",
-      "39774  env.health@north-herts.gov.uk   \n",
-      "39775  env.health@north-herts.gov.uk   \n",
-      "39776  env.health@north-herts.gov.uk   \n",
-      "39777  env.health@north-herts.gov.uk   \n",
-      "39778  env.health@north-herts.gov.uk   \n",
+      "             LocalAuthorityEmailAddress   \n",
+      "0      foodteam@folkestone-hythe.gov.uk  \\\n",
+      "1      foodteam@folkestone-hythe.gov.uk   \n",
+      "2      foodteam@folkestone-hythe.gov.uk   \n",
+      "3      foodteam@folkestone-hythe.gov.uk   \n",
+      "4      foodteam@folkestone-hythe.gov.uk   \n",
+      "...                                 ...   \n",
+      "38781     env.health@north-herts.gov.uk   \n",
+      "38782     env.health@north-herts.gov.uk   \n",
+      "38783     env.health@north-herts.gov.uk   \n",
+      "38784     env.health@north-herts.gov.uk   \n",
+      "38785      health@royalgreenwich.gov.uk   \n",
       "\n",
-      "                                                  scores SchemeType   \n",
-      "0      {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS  \\\n",
-      "1      {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-      "2      {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-      "3      {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-      "4      {'Hygiene': None, 'Structural': None, 'Confide...       FHRS   \n",
-      "...                                                  ...        ...   \n",
-      "39774  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-      "39775  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-      "39776  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-      "39777  {'Hygiene': None, 'Structural': None, 'Confide...       FHRS   \n",
-      "39778  {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
+      "                                                  scores  SchemeType   \n",
+      "0      {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...        FHRS  \\\n",
+      "1      {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "2      {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+      "3      {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "4      {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "...                                                  ...         ...   \n",
+      "38781  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "38782  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "38783  {'Hygiene': None, 'Structural': None, 'Confide...        FHRS   \n",
+      "38784  {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+      "38785  {'Hygiene': '', 'Structural': '', 'ConfidenceI...        FHRS   \n",
       "\n",
       "                                                 geocode RightToReply   \n",
-      "0      {'longitude': '1.385585', 'latitude': '51.1524...               \\\n",
-      "1      {'longitude': '1.383298', 'latitude': '51.1481...                \n",
-      "2      {'longitude': '1.378536', 'latitude': '51.1508...                \n",
-      "3      {'longitude': '1.371115', 'latitude': '51.1473...                \n",
-      "4      {'longitude': '1.4032986', 'latitude': '51.178...                \n",
+      "0         {'longitude': 1.195625, 'latitude': 51.083812}               \\\n",
+      "1         {'longitude': 1.196408, 'latitude': 51.086058}                \n",
+      "2         {'longitude': 1.194762, 'latitude': 51.085797}                \n",
+      "3          {'longitude': 1.188537, 'latitude': 51.08084}                \n",
+      "4          {'longitude': 1.188537, 'latitude': 51.08084}                \n",
       "...                                                  ...          ...   \n",
-      "39774  {'longitude': '0.041802', 'latitude': '52.0270...                \n",
-      "39775  {'longitude': '0.0147203', 'latitude': '52.000...                \n",
-      "39776  {'longitude': '0.032513', 'latitude': '52.0247...                \n",
-      "39777  {'longitude': '0.0418020002543926', 'latitude'...                \n",
-      "39778  {'longitude': '0.0386321', 'latitude': '52.026...                \n",
+      "38781    {'longitude': 0.0147203, 'latitude': 52.000754}                \n",
+      "38782     {'longitude': 0.032513, 'latitude': 52.024742}                \n",
+      "38783  {'longitude': 0.0418020002543926, 'latitude': ...                \n",
+      "38784   {'longitude': 0.0386321, 'latitude': 52.0263097}                \n",
+      "38785      {'longitude': 0.08384, 'latitude': 51.490142}                \n",
       "\n",
       "          Distance NewRatingPending   \n",
-      "0      4587.440907            False  \\\n",
-      "1      4587.362403            False   \n",
-      "2      4587.638930            False   \n",
-      "3      4587.776221            False   \n",
-      "4      4587.792282            False   \n",
+      "0      4591.765489            False  \\\n",
+      "1      4591.821311            False   \n",
+      "2      4591.871474            False   \n",
+      "3      4591.912145            False   \n",
+      "4      4591.912145            False   \n",
       "...            ...              ...   \n",
-      "39774  4668.615193            False   \n",
-      "39775  4668.621949            False   \n",
-      "39776  4668.863975            False   \n",
-      "39777  4668.615277            False   \n",
-      "39778  4668.701509            False   \n",
+      "38781  4668.621949            False   \n",
+      "38782  4668.863975            False   \n",
+      "38783  4668.615277            False   \n",
+      "38784  4668.701509            False   \n",
+      "38785  4623.972328             True   \n",
       "\n",
       "                                                    meta   \n",
       "0      {'dataSource': None, 'extractDate': '0001-01-0...  \\\n",
@@ -244,11 +244,11 @@
       "3      {'dataSource': None, 'extractDate': '0001-01-0...   \n",
       "4      {'dataSource': None, 'extractDate': '0001-01-0...   \n",
       "...                                                  ...   \n",
-      "39774  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
-      "39775  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
-      "39776  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
-      "39777  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
-      "39778  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+      "38781  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+      "38782  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+      "38783  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+      "38784  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+      "38785                                                NaN   \n",
       "\n",
       "                                                   links  \n",
       "0      [{'rel': 'self', 'href': 'https://api.ratings....  \n",
@@ -257,21 +257,21 @@
       "3      [{'rel': 'self', 'href': 'https://api.ratings....  \n",
       "4      [{'rel': 'self', 'href': 'https://api.ratings....  \n",
       "...                                                  ...  \n",
-      "39774  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
-      "39775  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
-      "39776  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
-      "39777  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
-      "39778  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+      "38781  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+      "38782  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+      "38783  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+      "38784  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+      "38785                                                NaN  \n",
       "\n",
-      "[39779 rows x 28 columns]\n"
+      "[38786 rows x 28 columns]\n"
      ]
     }
    ],
    "source": [
     "collection = db.establishments\n",
     "preview = collection.find()\n",
-    "f = pd.DataFrame(list(preview))\n",
-    "print(f)"
+    "preview_df = pd.DataFrame(list(preview))\n",
+    "print(preview_df)"
    ]
   },
   {
